--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -95,3 +95,16 @@ add_common_target_options(Benchmarks)
 if(MSVC)
 	target_compile_definitions(Benchmarks PUBLIC DOCTEST_CONFIG_USE_STD_HEADERS)
 endif()
+
+
+
+#===================================
+# Emscripten assets ================
+#===================================
+
+if(EMSCRIPTEN)
+	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -sLLD_REPORT_UNDEFINED --preload-file ${CMAKE_CURRENT_SOURCE_DIR}/Data/@/Tests/Data/")
+	
+	# Benchmarks additionally use the benchmark sample data.
+	target_link_libraries(Benchmarks "--preload-file ${CMAKE_CURRENT_SOURCE_DIR}/../Samples/basic/benchmark/data/@/Samples/basic/benchmark/data/")
+endif()
