Add a work-in-progress Vulkan backend (#236).
Currently, only the SDL platform is supported together with the Vulkan renderer. To use this backend, set the CMake configuration `SAMPLES_BACKEND=SDL_Vulkan`.

Development commits by @wh1t3lord (#236):

- Started Vulkan implementation
- Keep codebase simple, but easy to use.
- ADD: instance creation
- ADD: physical device and device properties
- ADD: The commentaries about ShellRenderInterfaceVulkan and trying to create Surface
- ADD: Destroying functions but get HWND from RMLUI
- ADD: obtaining HWND
- FIX: compilation
- ADD: standard way to initialize and shutdown
- ADD: Queues and Queues Indecies
- ADD: device creation
- ADD: swapchain
- ADD: OnResize method
- ADD: correct swapchain creation
- ADD: sync primitives
- ADD: presenting, but without resources
- ADD: start implementing resource management, creating descriptor set layout
- You must compile shaders by your own. So engine operates with SPV format only, not raw strings, not compiling files.
- ADD: creating shaders, but I need to implement that
- ADD: creating VkShaderModule
- ADD: remove not capable method in that arch
- ADD: Physical device wrapper, pipeline layout creation
- ADD: continue creating VkFramebuffer for swapchain
- FIX: compilation thing and waiting before destroying everything
- ADD: continue work
- FIX: swapchain creation
- FIX: formatting for commentary
- ADD: something new
- ADD: command list ring
- ADD: implemented command list ring
- ADD: added explanation commentary about using multiple logical frames for rendering
- ADD: added allocator for another allocator, but I need to implement it first
- ADD: added final allocator for dynamic buffer
- ADD: ring buffer pool implementation
- FIX: compilation fixes
- FIX: vma uses implementation in cpp
- ADD: successful creation and deletion
- ADD: started rendering begin and end scopes
- ADD: stable rendering
- ADD: correct rendering body
- ADD: clearing back buffer is working well
- ADD: something new

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -164,7 +164,7 @@ endif()
 option(BUILD_SAMPLES "Build samples" OFF)
 
 set(SAMPLES_BACKEND "auto" CACHE STRING "Backend platform and renderer used for the samples.")
-set_property(CACHE SAMPLES_BACKEND PROPERTY STRINGS auto Win32_GL2 X11_GL2 SDL_GL2 SDL_GL3 SDL_SDLrenderer SFML_GL2 GLFW_GL2 GLFW_GL3)
+set_property(CACHE SAMPLES_BACKEND PROPERTY STRINGS auto Win32_GL2 X11_GL2 SDL_GL2 SDL_GL3 SDL_Vulkan SDL_SDLrenderer SFML_GL2 GLFW_GL2 GLFW_GL3)
 
 if(SAMPLES_BACKEND STREQUAL "auto")
 	if(EMSCRIPTEN)
@@ -764,6 +764,13 @@ if(BUILD_SAMPLES OR BUILD_TESTING)
 		if(APPLE)
 			target_compile_definitions(shell PRIVATE GL_SILENCE_DEPRECATION)
 		endif()
+	endif()
+	
+	if(SAMPLES_BACKEND MATCHES "Vulkan$")
+		message("-- Adding Vulkan renderer backend.")
+		find_package(Vulkan REQUIRED)
+		target_include_directories(shell PRIVATE ${Vulkan_INCLUDE_DIR})
+		target_link_libraries(shell PRIVATE ${Vulkan_LIBRARIES})
 	endif()
 	
 	if(SAMPLES_BACKEND MATCHES "GL3$")
