Add Vulkan backend #236 #328
Adds a new RmlUi renderer for rendering with Vulkan. The new renderer comes with two backends so that it can be used together with one of the SDL or Win32 platforms.

To use one of these backends when compiling and running the samples, set the CMake configuration to either `SAMPLES_BACKEND=SDL_VK` or `SAMPLES_BACKEND=Win32_VK`.

Development commits:

@wh1t3lord
- Started Vulkan implementation
- Keep codebase simple, but easy to use.
- ADD: instance creation
- ADD: physical device and device properties
- ADD: The commentaries about ShellRenderInterfaceVulkan and trying to create Surface
- ADD: Destroying functions but get HWND from RMLUI
- ADD: obtaining HWND
- FIX: compilation
- ADD: standard way to initialize and shutdown
- ADD: Queues and Queues Indecies
- ADD: device creation
- ADD: swapchain
- ADD: OnResize method
- ADD: correct swapchain creation
- ADD: sync primitives
- ADD: presenting, but without resources
- ADD: start implementing resource management, creating descriptor set layout
- You must compile shaders by your own. So engine operates with SPV format only, not raw strings, not compiling files.
- ADD: creating shaders, but I need to implement that
- ADD: creating VkShaderModule
- ADD: remove not capable method in that arch
- ADD: Physical device wrapper, pipeline layout creation
- ADD: continue creating VkFramebuffer for swapchain
- FIX: compilation thing and waiting before destroying everything
- ADD: continue work
- FIX: swapchain creation
- FIX: formatting for commentary
- ADD: something new
- ADD: command list ring
- ADD: implemented command list ring
- ADD: added explanation commentary about using multiple logical frames for rendering
- ADD: added allocator for another allocator, but I need to implement it first
- ADD: added final allocator for dynamic buffer
- ADD: ring buffer pool implementation
- FIX: compilation fixes
- FIX: vma uses implementation in cpp
- ADD: successful creation and deletion
- ADD: started render

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -164,7 +164,7 @@ endif()
 option(BUILD_SAMPLES "Build samples" OFF)
 
 set(SAMPLES_BACKEND "auto" CACHE STRING "Backend platform and renderer used for the samples.")
-set_property(CACHE SAMPLES_BACKEND PROPERTY STRINGS auto Win32_GL2 X11_GL2 SDL_GL2 SDL_GL3 SDL_SDLrenderer SFML_GL2 GLFW_GL2 GLFW_GL3)
+set_property(CACHE SAMPLES_BACKEND PROPERTY STRINGS auto Win32_GL2 Win32_VK X11_GL2 SDL_GL2 SDL_GL3 SDL_VK SDL_SDLrenderer SFML_GL2 GLFW_GL2 GLFW_GL3)
 
 if(SAMPLES_BACKEND STREQUAL "auto")
 	if(EMSCRIPTEN)
@@ -711,12 +711,9 @@ if(BUILD_SAMPLES OR BUILD_TESTING)
 			set(EMSCRIPTEN_FLAGS "${EMSCRIPTEN_FLAGS} -sUSE_SDL=2 -sUSE_SDL_IMAGE=2 -sSDL2_IMAGE_FORMATS='[tga]'")
 		else()
 			find_package(SDL2 REQUIRED)
-			find_package(SDL2_image REQUIRED)
 			
 			if(NOT SDL2_FOUND)
 				message(FATAL_ERROR "SDL2 not found")
-			elseif(NOT SDL2_IMAGE_FOUND)
-				message(FATAL_ERROR "SDL2_image not found")
 			endif()
 			
 			if(SAMPLES_BACKEND STREQUAL "SDL_GL2")
@@ -729,6 +726,13 @@ if(BUILD_SAMPLES OR BUILD_TESTING)
 			# Check version requirement for the SDL renderer.
 			if(SAMPLES_BACKEND STREQUAL "SDL_SDLrenderer" AND "${SDL2_VERSION}" VERSION_LESS "2.0.20")
 				message(FATAL_ERROR "SDL2 native renderer backend (${SAMPLES_BACKEND}) requires SDL 2.0.20 (found ${SDL2_VERSION}).")
+			endif()
+			
+			if(SAMPLES_BACKEND STREQUAL "SDL_GL2" OR SAMPLES_BACKEND STREQUAL "SDL_GL3" OR SAMPLES_BACKEND STREQUAL "SDL_SDLrenderer")
+				find_package(SDL2_image REQUIRED)
+				if(NOT SDL2_IMAGE_FOUND)
+					message(FATAL_ERROR "SDL2_image not found")
+				endif()
 			endif()
 			
 			target_include_directories(shell PRIVATE ${SDL2_INCLUDE_DIR} ${SDL2_IMAGE_INCLUDE_DIR} ${GLEW_INCLUDE_DIR})
@@ -764,6 +768,18 @@ if(BUILD_SAMPLES OR BUILD_TESTING)
 		if(APPLE)
 			target_compile_definitions(shell PRIVATE GL_SILENCE_DEPRECATION)
 		endif()
+	endif()
+	
+	if(SAMPLES_BACKEND MATCHES "VK$")
+		message("-- Using Vulkan renderer backend.")
+		
+		option(RMLUI_VK_DEBUG "Enable debugging mode for Vulkan renderer." OFF)
+		mark_as_advanced(RMLUI_VK_DEBUG)
+		if(RMLUI_VK_DEBUG)
+		  target_compile_definitions(shell PRIVATE RMLUI_VK_DEBUG)
+		endif()
+
+		target_link_libraries(shell PRIVATE ${CMAKE_DL_LIBS})
 	endif()
 	
 	if(SAMPLES_BACKEND MATCHES "GL3$")
