--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -431,7 +431,7 @@ foreach(library ${LIBRARIES})
 		${MASTER_${library}_PUB_HDR_FILES}
 		${${library}_SRC_FILES}
 	)
-        add_library(Rml::${library} ALIAS ${NAME})
+	add_library(RmlUi::${library} ALIAS ${NAME})
 
 	set_target_properties(${NAME} PROPERTIES
 	   VERSION ${PROJECT_VERSION}
