CMake: Create library alias (#394)
* feat(cmake): create library alias

Signed-off-by: Longtao Zhang <DragonBillow@outlook.com>

* feat(cmake): rename library alias and code style

Signed-off-by: Longtao Zhang <DragonBillow@outlook.com>

Signed-off-by: Longtao Zhang <DragonBillow@outlook.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -431,6 +431,7 @@ foreach(library ${LIBRARIES})
 		${MASTER_${library}_PUB_HDR_FILES}
 		${${library}_SRC_FILES}
 	)
+	add_library(RmlUi::${library} ALIAS ${NAME})
 
 	set_target_properties(${NAME} PROPERTIES
 	   VERSION ${PROJECT_VERSION}
