--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,9 +53,9 @@ if(POLICY CMP0074)
 	cmake_policy(SET CMP0074 NEW)
 endif(POLICY CMP0074)
 
-project(RmlUi LANGUAGES C CXX VERSION 5.1)
+project(RmlUi LANGUAGES C CXX VERSION 6.0)
 
-set(RMLUI_VERSION_RELEASE true)
+set(RMLUI_VERSION_RELEASE false)
 
 if(RMLUI_VERSION_RELEASE)
 	set(RMLUI_VERSION_SUFFIX "")
